tests/snapshots/yaml_suite_snapshots__yaml_suite_Y2GN_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Anchor with colon in the middle
  from: "@perlpunk"
  tags: anchor
  yaml: "---\nkey: &an:chor value\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL &an:chor :value\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key\": \"value\"\n}\n"
  dump: "---\nkey: &an:chor value\n"
