tests/snapshots/yaml_suite_snapshots__yaml_suite_Y2GN_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nkey: &an:chor value\n"
  from: "@perlpunk"
  json: "{\n  \"key\": \"value\"\n}\n"
  name: Anchor with colon in the middle
  tags: anchor
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL &an:chor :value\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nkey: &an:chor value\n"
