tests/snapshots/yaml_suite_snapshots__yaml_suite_Y79Y_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Tabs in various contexts
  from: "@ingydotnet"
  tags: whitespace
  fail: true
  yaml: "foo: |\n————»\nbar: 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n"
- yaml: "foo: |\n ———»\nbar: 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |\\t\\n\n   =VAL :bar\n   =VAL :1\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"\\t\\n\",\n  \"bar\": 1\n}\n"
  dump: "foo: |\n  ———»\nbar: 1\n"
- yaml: "- [\n————»\n foo\n ]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :foo\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  [\n    \"foo\"\n  ]\n]\n"
  dump: "- - foo\n"
- fail: true
  yaml: "- [\n————»foo,\n foo\n ]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n"
  json: null
- fail: true
  yaml: "-———»-\n"
- fail: true
  yaml: "- ——»-\n"
- fail: true
  yaml: "?———»-\n"
- fail: true
  yaml: "? -\n:———»-\n"
- fail: true
  yaml: "?———»key:\n"
- fail: true
  yaml: "? key:\n:———»key:\n"
- yaml: "-———»-1\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :-1\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  -1\n]\n"
  dump: "- -1\n"
