tests/snapshots/yaml_suite_snapshots__yaml_suite_Y79Y_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tabs in various contexts
  from: "@ingydotnet"
  tags: whitespace
  fail: true
  yaml: "foo: |\n————»\nbar: 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n"
- yaml: "foo: |\n ———…"
  tree: "+STR\n +DOC\n…"
  json: "{\n  \"foo\": …"
  dump: "foo: |\n  ——…"
- fail: true
  yaml: "-———»-\n"
- fail: true
  yaml: "- ——»-\n"
- fail: true
  yaml: "?———»-\n"
- fail: true
  yaml: "? key:\n:——…"
- yaml: "-———»-1\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :-1\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  -1\n]\n"
  dump: "- -1\n"
# 4 more items
